--- a/src/component/MarketPlace/registration/buyer.css
+++ b/src/component/MarketPlace/registration/buyer.css
@@ -9,8 +9,12 @@
 .checkbox-label{
 	padding: 10px;
 }
-.buyer-map-img {
+#buyer-section{
 	height: 100vh;
+	overflow: scroll;
+}
+.buyer-map-img {
+	height: 100vh !important;
 	background-image: url(../../../photos/grainMap.jpeg);
 	background-repeat: no-repeat;
   	 -webkit-background-size: cover;
