--- a/src/component/MarketPlace/registration/seller.css
+++ b/src/component/MarketPlace/registration/seller.css
@@ -1,7 +1,10 @@
 #seller-page {
-  min-height: 100vh;
+  height: 100vh !important;
 }
-
+#register-section{
+  height: 100vh;
+  overflow: scroll;
+}
 .seller-page h3 {
   font-size: 1.8rem;
   font-weight: 700;
@@ -14,7 +17,7 @@
   padding: 8px;
 }
 .register-map-img {
-  height: 100%;
+  height: 100vh !important;
   background-image: url(../../../photos/grainMap.jpeg);
   background-repeat: no-repeat;
   -webkit-background-size: cover;
@@ -28,7 +31,7 @@
 }
 
 .seller-page {
-  padding: 2rem 6rem;
+  padding: 0.5rem 6rem;
 }
 .first-register-content {
   margin-top: 30px;
