--- a/src/pages/tofaacademy/tofaacademy.css
+++ b/src/pages/tofaacademy/tofaacademy.css
@@ -25,7 +25,7 @@
 }
 
 .dot {
-  position: relative;
+  position: absolute;
   height: 28rem;
   width: 28rem;
   border-radius: 50%;
@@ -129,9 +129,8 @@
 }
 
 .video {
-  left: 5.15%;
-  right: 0%;
-  top: 0%;
+  
+  
   bottom: 7.89%;
   background: rgba(0, 0, 0, 0.2);
   border-radius: 8px;
