--- a/src/component/MarketPlace/registration/register.css
+++ b/src/component/MarketPlace/registration/register.css
@@ -1,3 +1,7 @@
+.auth-logo {
+	width: 120px;
+	position: absolute;
+}
 
 #register-page{
 	height: 100vh;
@@ -11,6 +15,7 @@
   	-moz-background-size: cover;
   	-o-background-size: cover;
   	background-size: cover;
+	padding: 30px;
 }
 .back-txt {
 	font-weight: 700;
@@ -36,40 +41,45 @@
     margin-top: 15px;
 }
 .register-content img{
-height: 9vh;
-padding: 5px ;
+	height: 65px;
+	padding: 5px ;
+	margin-right:20px;
 }
 .register-content a{
     text-decoration: none;
 }
 .register-content h4{
-    font-weight: 500;
-font-size: 18px;
+    font-weight: 600;
+	font-size: 18px;
+	margin-top: 5px;
 }
 .register-content{
-background: #FFFFFF;
+	background: #FFFFFF;
 	border: 1px solid #F5F5F5;
 	box-sizing: border-box;
 	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.08)!important;
-	margin-bottom: 15px;
+	margin-bottom: 25px;
 	font-size: .95rem;
 	font-weight: 400;
-    padding: 12px;
+    padding: 20px;
+	border-radius:5px;
 }
 .registration-content{
    padding: 6rem;
 }
 .registration-content p{
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+	margin-bottom: 0;
 }
 .info-txt{
 	float: right;	
 }
 .registration-content h3{
-font-size: 1.8rem;
-font-weight: 700;
+	font-size: 1.8rem;
+	font-weight: 700;
+	margin-bottom: 15px;
 }
 .register-content:hover{
 	border:1px solid #DD4F05;
@@ -78,8 +88,8 @@ font-weight: 700;
     padding-top: 3rem;
 }
 .register-content p{
-font-weight: 500;
-font-size: 14px;
+	font-weight: 500;
+	font-size: 14px;
 }
 @media (max-width: 768px) {
 
