--- a/src/component/MarketPlace/login/login.css
+++ b/src/component/MarketPlace/login/login.css
@@ -1,57 +1,7 @@
-
-.button {
-	width: 100%;
-	border-radius: 4px;
-	padding: 12px;
-    font-size: 1rem;
-    font-weight: 700;
-}
-
-.input {
-	height: 50px;
-    font-size: .9rem;
-    padding-left: 15px;
-    padding-right: 15px;
-    background-color: #FFFFFF!important;
-}
-
-input {
-	box-shadow:none !important;
-    outline:0px !important;
-}
-
-button {
-	box-shadow:none !important;
-    outline:0px !important;
-}
-
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #DDDDDD!important;
-  opacity: 1; /* Firefox */
-}
-
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-  color: red!important;
-}
-
-::-ms-input-placeholder { /* Microsoft Edge */
-  color: red!important;
-}
-
 /*Auth Page*/
 
 #user-auth {
 	height: 100vh !important;
-}
-
-.user-auth-lhs {
-	height: 100vh;
-	background-image: url(../../../photos/grainMap.jpeg);
-	background-repeat: no-repeat;
-  	-webkit-background-size: cover;
-  	-moz-background-size: cover;
-  	-o-background-size: cover;
-  	background-size: cover;
 }
 
 .map-img {
@@ -68,10 +18,6 @@ button {
 #form-page{
 	height: 100vh;
 	overflow: scroll;
-}
-.user-auth-rhs {
-	height: 100vh;
-	padding: 40px 40px;
 }
 
 .user-nav {
@@ -179,25 +125,21 @@ button {
 	margin-right: 25px;
 }
 
+.forgot-pwd {
+	text-align: right;
+	padding: 10px 0;
+	font-size: .95rem;
+}
+
+.forgot-pwd a {
+	color: #282828;
+	text-decoration: none;
+}
+
 
 @media (max-width: 768px) {
 
-	.user-auth-wrap {
-	    width: 100%;
-	    padding:0px;
-	}
 
-	.user-auth-rhs {
-    padding: 25px;
-	}
+	
 
 }
-
-/*End of Auth page*/
-
-
-
-
-
-
-
