--- a/src/component/MarketPlace/registration/register.css
+++ b/src/component/MarketPlace/registration/register.css
@@ -40,17 +40,36 @@
 #header-text{
     margin-top: 15px;
 }
-.register-content img{
-	height: 65px;
-	padding: 5px ;
-	margin-right:20px;
+.register-content .action-icon{
+	height: 25px;
+	float: right;
+	margin: 20px 0 0 65px;
 	display: none;
 }
-.register-content span{
-	font-size: 50px;
+
+.register-content:hover .action-icon {
+	display: block;
+}
+
+/* SVG */
+.register-content svg{
+	width:65px;
 	padding: 5px ;
 	margin-right:20px;
 }
+.register-content:hover svg polygon {
+	fill: #DD4F05;
+	stroke: #DD4F05;
+	stroke-width: 2px;
+}
+.register-content:hover svg #shape {
+	stroke: #FFFFFF;
+}
+.register-content:hover svg .shape {
+	fill: #FFFFFF;
+}
+/* End SVG */
+
 .register-content a{
     text-decoration: none;
 }
